[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "evolutionary-solver"
version = "0.2.1"
description = "Domain-agnostic grid sweep + evolutionary optimizer with continuation seeding"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "dookaloosy" }]
keywords = ["optimization", "parameter-sweep", "evolutionary-algorithm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = ["numpy"]

[tool.setuptools]
py-modules = ["sweep_engine", "optimizer_engine"]
